# andrewsavila.github.io

./: .env-python.html  .gitignore  CNAME  README.md  archives.html  authors.html  categories.html  contato.html  ide-estrutura-codigo-python.html  index.html  intro-python.html  pacotes-codigo-python.html  pelicanconf.py  programacao-python.html  publishconf.py  tags.html
author/: andre-souza.html
category/: programacao.html
content/Manipulação de Dados/python/: ApresentacaoPython.md  InstalandoPacotesPython.md  ProgramacaoPython.md  SenhasAcessoDados.md  estruturaDoPrograma.md
content/articles/Manipulação de Dados/: ProgramacaoPython.md  ambiente-trabalho.md
content/extra/: CNAME
content/pages/: Contact.md
data-workspace/: data-workspace.code-workspace  pyproject.toml
data-workspace/notebook/: exemplo01.ipynb  exemplo02.ipynb
data-workspace/notebook/dados/: listapessoas01.csv  listapessoas02.csv  listapessoasUnida.csv
feeds/: all.atom.xml  programacao.atom.xml
output/: .env-python.html  archives.html  authors.html  categories.html  contato.html  ide-estrutura-codigo-python.html  index.html  intro-python.html  programacao-python.html  tags.html
output/author/: andre-souza.html
output/category/: programacao.html
output/programacao/: .env-python.html  ambiente-trabalho.html  intro-python.html  programacao-python.html
output/tag/: linguagem.html
programacao/: .env-python.html  ambiente-trabalho.html  intro-python.html  programacao-python.html
python/notebook/: exemplo01.py
tag/: linguagem.html
templates/: index.html
