[project]
name = "notebook"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Souza",email = "andre.souza@plataforma13.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

